# Requestor

./: CMakeLists.txt  LICENSE  README.md
include/: Concepts.hpp  RequestHandlerFactory.hpp  Requestor.hpp
include/Interfaces/: IRequest.hpp  IRequestHandler.hpp
include/Requestor/: RequestHandlerFactory.hpp  Requestor.hpp
include/Requestor/Exceptions/: HandlerAlreadyRegistered.hpp  HandlerNotFound.hpp  HandlerResultTypeMismatch.hpp
include/Requestor/Interfaces/: IRequestHandler.hpp
